--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="banner">
 			
 			<a href="https://www.amazon.in/tryprime?tag=gameiplay07-21">
-				<img src="imgs/IN-PRIME-1068x260.jpg" width="1068" height="260">
+				<img src="imgs/IN-PRIME-1068x260.jpg" alt="bounty banner" width="1068" height="260">
 				<p id="bounty">
 					Amazon Prime for Exclusive shopping deals & selection, Ad-free music & more.
 				</p>
@@ -32,8 +32,8 @@
         <div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/41Vi3LT" alt="img link">
-			<img src="imgs/614AipEWSIL._SX679_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/41Vi3LT" alt="boAt Wave Call Smart Watch, Smart Talk">
+			<img src="imgs/614AipEWSIL._SX679_.jpg" alt="boAt Wave Call Smart Watch, Smart Talk" width="350" height="350">
 			<p id="title">
 				boAt Wave Call Smart Watch, Smart Talk
 			</p>
@@ -44,8 +44,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3L9c3co" alt="img link">
-			<img src="imgs/31TgiGf9uML._SX679_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3L9c3co" alt="Lloyd 0.8 Ton 3 Star Inverter Split AC <br>(5 in 1 Convertible, Copper, Anti-Viral + <br>PM 2.5 Filter, 2023 Model, <br>White with Silver Deco Strip, GLS09I3FWSEV)">
+			<img src="imgs/31TgiGf9uML._SX679_.jpg" alt="Lloyd 0.8 Ton 3 Star Inverter Split AC <br>(5 in 1 Convertible, Copper, Anti-Viral + <br>PM 2.5 Filter, 2023 Model, <br>White with Silver Deco Strip, GLS09I3FWSEV)" width="350" height="350">
 			<p id="title">
 				Lloyd 0.8 Ton 3 Star Inverter Split AC <br>(5 in 1 Convertible, Copper, Anti-Viral + <br>PM 2.5 Filter, 2023 Model, <br>White with Silver Deco Strip, GLS09I3FWSEV)
 			</p>
@@ -56,8 +56,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3YANuYW" alt="img link">
-			<img src="imgs/51VBo2iDGxL._SX679_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3YANuYW" alt="Crompton Ozone Desert Air Cooler- 75L">
+			<img src="imgs/51VBo2iDGxL._SX679_.jpg" alt="Crompton Ozone Desert Air Cooler- 75L" width="350" height="350">
 			<p id="title">
 				Crompton Ozone Desert Air Cooler- 75L
 			</p>
@@ -68,8 +68,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3LdxHwf" alt="img link">
-			<img src="imgs/816lZp-8R2L._SX679_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3LdxHwf" alt="BAJAJ PYGMY MINI 110 MM 10 W <br>HIGH SPEED OPERATION<br>, USB CHARGING, MULTI-CLIP FUNCTION <br>PERSONAL FAN">
+			<img src="imgs/816lZp-8R2L._SX679_.jpg" alt="BAJAJ PYGMY MINI 110 MM 10 W <br>HIGH SPEED OPERATION<br>, USB CHARGING, MULTI-CLIP FUNCTION <br>PERSONAL FAN" width="350" height="350">
 			<p id="title">
 				BAJAJ PYGMY MINI 110 MM 10 W <br>HIGH SPEED OPERATION<br>, USB CHARGING, MULTI-CLIP FUNCTION <br>PERSONAL FAN
 			</p>
@@ -80,8 +80,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3L9zkuL" alt="img link">
-			<img src="imgs/61DwNdHQhyL._SX679_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3L9zkuL" alt="Biotique Bio Herbcolor Conditioning Hair Color">
+			<img src="imgs/61DwNdHQhyL._SX679_.jpg" alt="Biotique Bio Herbcolor Conditioning Hair Color" width="350" height="350">
 			<p id="title">
 				Biotique Bio Herbcolor Conditioning Hair Color
 			</p>
@@ -92,8 +92,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/4225rD0" alt="img link">
-			<img src="imgs/410GhUeNDiL.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/4225rD0" alt="Raaga Professional De-Tan">
+			<img src="imgs/410GhUeNDiL.jpg" alt="Raaga Professional De-Tan" width="350" height="350">
 			<p id="title">
 				Raaga Professional De-Tan
 			</p>
@@ -104,8 +104,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3Zx8v8s" alt="img link">
-			<img src="imgs/51c4amfvZEL._SY879_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3Zx8v8s" alt="Lakmé Absolute Perfect Radiance Skin<br>Lightening Light Cream with<br> Ayur Product, 50g">
+			<img src="imgs/51c4amfvZEL._SY879_.jpg" alt="Lakmé Absolute Perfect Radiance Skin<br>Lightening Light Cream with<br> Ayur Product, 50g" width="350" height="350">
 			<p id="title">
 				Lakmé Absolute Perfect Radiance Skin<br>Lightening Light Cream with<br> Ayur Product, 50g
 			</p>
@@ -116,8 +116,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3J2BUQL" alt="img link">
-			<img src="imgs/61LRX03zSaL._SX679_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3J2BUQL" alt="Garnier Skin Naturals, Night Cream, Anti-Dark Spots">
+			<img src="imgs/61LRX03zSaL._SX679_.jpg" alt="Garnier Skin Naturals, Night Cream, Anti-Dark Spots" width="350" height="350">
 			<p id="title">
 				Garnier Skin Naturals, Night Cream, Anti-Dark Spots
 			</p>
@@ -128,8 +128,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3ZwtV5F" alt="img link">
-			<img src="imgs/81kO7CYemPS._SX522_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3ZwtV5F" alt="Cheryl's Cosmeceuticals SensiGlow">
+			<img src="imgs/81kO7CYemPS._SX522_.jpg" alt="Cheryl's Cosmeceuticals SensiGlow" width="350" height="350">
 			<p id="title">
 				Cheryl's Cosmeceuticals SensiGlow
 			</p>
@@ -140,8 +140,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3Jqtwfj" alt="img link">
-			<img src="imgs/61y11J0WHCL._SX679_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3Jqtwfj" alt="Maybelline New York Baby Lips Balm, Highline Wine">
+			<img src="imgs/61y11J0WHCL._SX679_.jpg" alt="Maybelline New York Baby Lips Balm, Highline Wine" width="350" height="350">
 			<p id="title">
 				Maybelline New York Baby Lips Balm, Highline Wine
 			</p>
@@ -152,8 +152,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3YOhjWp" alt="img link">
-			<img src="imgs/81Dqnoh2S7L._SX679_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3YOhjWp" alt="Kesh King Ayurvedic Anti Hairfall Hair Oil 300ml <br>& Anti-Hairfall Shampoo, 600 ml">
+			<img src="imgs/81Dqnoh2S7L._SX679_.jpg" alt="Kesh King Ayurvedic Anti Hairfall Hair Oil 300ml <br>& Anti-Hairfall Shampoo, 600 ml" width="350" height="350">
 			<p id="title">
 				Kesh King Ayurvedic Anti Hairfall Hair Oil 300ml <br>& Anti-Hairfall Shampoo, 600 ml
 			</p>
@@ -164,8 +164,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3YOhjWp" alt="img link">
-			<img src="imgs/71aiqTDRNGL._SX679_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3YOhjWp" alt="Kesh King Ayurvedic Anti Hairfall Hair Oil">
+			<img src="imgs/71aiqTDRNGL._SX679_.jpg" alt="Kesh King Ayurvedic Anti Hairfall Hair Oil" width="350" height="350">
 			<p id="title">
 				Kesh King Ayurvedic Anti Hairfall Hair Oil
 			</p>
@@ -176,8 +176,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3JrJiGK" alt="img link">
-			<img src="imgs/61ScSAfkDSL._SX679_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3JrJiGK" alt="Indulekha Bringha Ayurvedic Hair Oil 100 ml">
+			<img src="imgs/61ScSAfkDSL._SX679_.jpg" alt="Indulekha Bringha Ayurvedic Hair Oil 100 ml" width="350" height="350">
 			<p id="title">
 				Indulekha Bringha Ayurvedic Hair Oil 100 ml
 			</p>
@@ -188,8 +188,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3l09qPI" alt="img link">
-			<img src="imgs/71cYS32jadL._SY679_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3l09qPI" alt="L’Oréal Paris Spa Shampoo and Conditioner">
+			<img src="imgs/71cYS32jadL._SY679_.jpg" alt="L’Oréal Paris Spa Shampoo and Conditioner" width="350" height="350">
 			<p id="title">
 				L’Oréal Paris Spa Shampoo and Conditioner
 			</p>
@@ -200,8 +200,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3ymx247" alt="img link">
-			<img src="imgs/41dtn0YEsWL._SX300_SY300_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3ymx247" alt="Search - pears soap large pack">
+			<img src="imgs/41dtn0YEsWL._SX300_SY300_.jpg" alt="Search - pears soap large pack" width="350" height="350">
 			<p id="title">
 				Search - pears soap large pack
 			</p>
@@ -212,8 +212,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/41XxTFS" alt="img link">
-			<img src="imgs/51kcA5D1dQL._SX384_BO1,204,203,200_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/41XxTFS" alt="Children Knowledge Bank : <br>A Tonic For Your Child's Brain">
+			<img src="imgs/51kcA5D1dQL._SX384_BO1,204,203,200_.jpg" alt="Children Knowledge Bank : <br>A Tonic For Your Child's Brain" width="350" height="350">
 			<p id="title">
 				Children Knowledge Bank : <br>A Tonic For Your Child's Brain
 			</p>
@@ -224,8 +224,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3YykHnW" alt="img link">
-			<img src="imgs/717wlP-z1ZL._SX679_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3YykHnW" alt="Lapster Caddy for ssd and HDD, <br>Optical Bay 2nd Hard Drive Caddy">
+			<img src="imgs/717wlP-z1ZL._SX679_.jpg" alt="Lapster Caddy for ssd and HDD, <br>Optical Bay 2nd Hard Drive Caddy" width="350" height="350">
 			<p id="title">
 				Lapster Caddy for ssd and HDD, <br>Optical Bay 2nd Hard Drive Caddy
 			</p>
@@ -236,8 +236,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3LrwIcb" alt="img link">
-			<img src="imgs/31uYjE0NeL.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3LrwIcb" alt="Motorola g31 (Meteorite Grey, 128 GB) (6 GB RAM)">
+			<img src="imgs/31uYjE0NeL.jpg" alt="Motorola g31 (Meteorite Grey, 128 GB) (6 GB RAM)" width="350" height="350">
 			<p id="title">
 				Motorola g31 (Meteorite Grey, 128 GB) (6 GB RAM)
 			</p>
@@ -248,8 +248,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3ZVse14" alt="img link">
-			<img src="imgs/71eVAHH3tsL._SX679_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3ZVse14" alt="boAt Type C A325 Tangle-free, Sturdy Type C Cable">
+			<img src="imgs/71eVAHH3tsL._SX679_.jpg" alt="boAt Type C A325 Tangle-free, Sturdy Type C Cable" width="350" height="350">
 			<p id="title">
 				boAt Type C A325 Tangle-free, Sturdy Type C Cable
 			</p>
@@ -260,8 +260,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3l7qSlb" alt="img link">
-			<img src="imgs/41UOFNDyU3L._SY300_SX300_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3l7qSlb" alt="FSFTTRAD Garden Pruning Shears tree cutter">
+			<img src="imgs/41UOFNDyU3L._SY300_SX300_.jpg" alt="FSFTTRAD Garden Pruning Shears tree cutter" width="350" height="350">
 			<p id="title">
 				FSFTTRAD Garden Pruning Shears tree cutter
 			</p>
@@ -272,8 +272,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3J0pmtb" alt="img link">
-			<img src="imgs/613qOogqnzL._AC_UY218_.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3J0pmtb" alt="Search for - Secret Camera">
+			<img src="imgs/613qOogqnzL._AC_UY218_.jpg" alt="Search for - Secret Camera" width="350" height="350">
 			<p id="title">
 				Search for - Secret Camera
 			</p>
@@ -284,8 +284,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3T36o9J" alt="img link">
-			<img src="imgs/realme narzo 50A Prime.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3T36o9J" alt="realme narzo 50A Prime">
+			<img src="imgs/realme narzo 50A Prime.jpg" alt="realme narzo 50A Prime" width="350" height="350">
 			<p id="title">
 				realme narzo 50A Prime
 			</p>
@@ -296,8 +296,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3ZLiyqg" alt="img link">
-			<img src="imgs/Happilo All Natural Unsweetened Peanut Butter Creamy 1Kg.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3ZLiyqg" alt="Happilo All Natural Unsweetened <br>Peanut Butter Creamy 1Kg">
+			<img src="imgs/Happilo All Natural Unsweetened Peanut Butter Creamy 1Kg.jpg" alt="Happilo All Natural Unsweetened <br>Peanut Butter Creamy 1Kg" width="350" height="350">
 			<p id="title">
 				Happilo All Natural Unsweetened <br>Peanut Butter Creamy 1Kg
 			</p>
@@ -308,8 +308,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3kXe54M" alt="img link">
-			<img src="imgs/Shalimar Premium OXO - Biodegradable Garbage Bags (Medium).jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3kXe54M" alt="Shalimar Premium OXO - <br>Biodegradable Garbage Bags (Medium)">
+			<img src="imgs/Shalimar Premium OXO - Biodegradable Garbage Bags (Medium).jpg" alt="Shalimar Premium OXO - <br>Biodegradable Garbage Bags (Medium)" width="350" height="350">
 			<p id="title">
 				Shalimar Premium OXO - <br>Biodegradable Garbage Bags (Medium)
 			</p>
@@ -320,8 +320,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3Zzz3pA" alt="img link">
-			<img src="imgs/Nilkamal STL22 Plastic Stool.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3Zzz3pA" alt="Nilkamal STL22 Plastic Stool">
+			<img src="imgs/Nilkamal STL22 Plastic Stool.jpg" alt="Nilkamal STL22 Plastic Stool" width="350" height="350">
 			<p id="title">
 				Nilkamal STL22 Plastic Stool
 			</p>
@@ -332,8 +332,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3l5hBtR" alt="img link">
-			<img src="imgs/Samsung Galaxy A04e.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3l5hBtR" alt="Samsung Galaxy A04e">
+			<img src="imgs/Samsung Galaxy A04e.jpg" alt="Samsung Galaxy A04e" width="350" height="350">
 			<p id="title">
 				Samsung Galaxy A04e
 			</p>
@@ -344,8 +344,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3T35Y39" alt="img link">
-			<img src="imgs/ADDMAX Extension Cord_1.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3T35Y39" alt="ADDMAX Extension Cord">
+			<img src="imgs/ADDMAX Extension Cord_1.jpg" alt="ADDMAX Extension Cord" width="350" height="350">
 			<p id="title">
 				ADDMAX Extension Cord
 			</p>
@@ -356,8 +356,8 @@
 </div><div class="flex-item">
 	
 	<p>
-		<a href="https://amzn.to/3YACKKm" alt="img link">
-			<img src="imgs/mad_honey_1.jpg" alt="product image" width="350" height="350">
+		<a href="https://amzn.to/3YACKKm" alt="Mad Honey">
+			<img src="imgs/mad_honey_1.jpg" alt="Mad Honey" width="350" height="350">
 			<p id="title">
 				Mad Honey
 			</p>
