--- a/index.html
+++ b/index.html
@@ -41,6 +41,90 @@
         <div class="flex-item">
 	
 	<p>
+		<a href="https://www.amazon.in/Vega-Cliff-Helmet-Smoke-Visor/dp/B07YZBJL3N/ref=sr_1_30?keywords=vega&amp;pf_rd_i=4772060031&amp;pf_rd_m=A1K21FY43GMZF8&amp;pf_rd_p=78779561-c5b4-4c6e-af94-b83ac0c50aaa&amp;pf_rd_r=6DQ4580HVE756WMGPPRP&amp;pf_rd_s=merchandised-search-19&amp;pf_rd_t=101&amp;qid=1678423126&amp;refinements=p_89%253AVega&amp;s=automotive&amp;sr=1-30&_encoding=UTF8&tag=gameiplay07-21&linkCode=ur2&linkId=57e96f5321fcedd4bfcc31e69c391cb8&camp=3638&creative=24630" alt="Vega Cliff Helmet Smoke Visor (Cliff, Cliff DX, Cliff Air)">
+			<img src="imgs/31ptOgIqFOL.jpg" alt="Vega Cliff Helmet Smoke Visor (Cliff, Cliff DX, Cliff Air)" width="350" height="350">
+			<p id="title">
+				Vega Cliff Helmet Smoke Visor (Cliff, Cliff DX, Cliff Air)
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/Vega-Crux-DX-Helmet-Camouflage/dp/B0725YH69T/ref=sr_1_13_sspa?keywords=vega&amp;pf_rd_i=4772060031&amp;pf_rd_m=A1K21FY43GMZF8&amp;pf_rd_p=78779561-c5b4-4c6e-af94-b83ac0c50aaa&amp;pf_rd_r=6DQ4580HVE756WMGPPRP&amp;pf_rd_s=merchandised-search-19&amp;pf_rd_t=101&amp;qid=1678423126&amp;refinements=p_89%253AVega&amp;s=automotive&amp;sr=1-13-spons&amp;sp_csd=d2lkZ2V0TmFtZT1zcF9tdGY&amp;psc=1&_encoding=UTF8&tag=gameiplay07-21&linkCode=ur2&linkId=01f549ae6aa0ebb3ee404159c1ae626e&camp=3638&creative=24630" alt="Crux Dx Camouflage Dull Black Battle Green Helmet-L">
+			<img src="imgs/61k4f6zrhqL._SX679_.jpg" alt="Crux Dx Camouflage Dull Black Battle Green Helmet-L" width="350" height="350">
+			<p id="title">
+				Crux Dx Camouflage Dull Black Battle Green Helmet-L
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/STRIFF-Adjustable-Patented-Ventilated-Compatible/dp/B07XCM6T4N/ref=sr_1_3?crid=D1VHOI3SAJJZ&amp;keywords=laptop%252Bstand&amp;qid=1678422899&amp;sprefix=laptop%252B%252Caps%252C364&amp;sr=8-3&amp;th=1&_encoding=UTF8&tag=gameiplay07-21&linkCode=ur2&linkId=1ef97b095dd9bb0f7432cae867fa733d&camp=3638&creative=24630" alt="STRIFF Adjustable Laptop Tabletop Stand Patented Riser Ventilated">
+			<img src="imgs/71Zf9uUp+GL._SX679_.jpg" alt="STRIFF Adjustable Laptop Tabletop Stand Patented Riser Ventilated" width="350" height="350">
+			<p id="title">
+				STRIFF Adjustable Laptop Tabletop Stand Patented Riser Ventilated
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/PC-SQUARE-Adjustable-Ergonomic-Compatible/dp/B09B9SPC7F/ref=sr_1_2_sspa?crid=D1VHOI3SAJJZ&amp;keywords=laptop+stand&amp;qid=1678422899&amp;sprefix=laptop+%252Caps%252C364&amp;sr=8-2-spons&amp;sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&amp;psc=1&amp;smid=AIISAMMJKL4IV&_encoding=UTF8&tag=gameiplay07-21&linkCode=ur2&linkId=76b6f641e2f7f3c7b4f4b17fd0d9b378&camp=3638&creative=24630" alt="PC SQUARE Laptop Tabletop Stand/ Computer Tablet Stand 6 Angles">
+			<img src="imgs/61hpz-rwvlL._SX679_.jpg" alt="PC SQUARE Laptop Tabletop Stand/ Computer Tablet Stand 6 Angles" width="350" height="350">
+			<p id="title">
+				PC SQUARE Laptop Tabletop Stand/ Computer Tablet Stand 6 Angles
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/Mattel-Uno-Playing-Card-Game/dp/B00GTJSGXE/ref=sr_1_1_sspa?crid=2G9X7AHHRYAIK&amp;keywords=uno&amp;qid=1678422682&amp;sprefix=uno%252Caps%252C244&amp;sr=8-1-spons&amp;sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&amp;psc=1&_encoding=UTF8&tag=gameiplay07-21&linkCode=ur2&linkId=d71323ef7eb2717c5152ed9483c56a23&camp=3638&creative=24630" alt="Mattel Uno Playing Card Game">
+			<img src="imgs/41R8fti5wnL._SX300_SY300_.jpg" alt="Mattel Uno Playing Card Game" width="350" height="350">
+			<p id="title">
+				Mattel Uno Playing Card Game
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/Logitech-M221-Silent-Wireless-Mouse/dp/B01MQ5U383/ref=sxin_18?asc_contentid=amzn1.osa.442bbfb4-d26f-4153-b361-1e2fc0b9c6ef.A21TJRUUN4KGV.en_IN&amp;asc_contenttype=article&amp;ascsubtag=amzn1.osa.442bbfb4-d26f-4153-b361-1e2fc0b9c6ef.A21TJRUUN4KGV.en_IN&amp;content-id=amzn1.sym.feb2b32b-0085-4665-973c-36b431684408%253Aamzn1.sym.feb2b32b-0085-4665-973c-36b431684408&amp;creativeASIN=B01MQ5U383&amp;cv_ct_cx=bluetooth%252Bmouse%252Bfor%252Blaptop&amp;cv_ct_id=amzn1.osa.442bbfb4-d26f-4153-b361-1e2fc0b9c6ef.A21TJRUUN4KGV.en_IN&amp;cv_ct_pg=search&amp;cv_ct_we=asin&amp;cv_ct_wn=osp-single-source-pecos-desktop&amp;keywords=bluetooth%252Bmouse%252Bfor%252Blaptop&amp;linkCode=oas&amp;pd_rd_i=B01MQ5U383&amp;pd_rd_r=cebb3d50-6f27-4d91-b1d9-592ec5a292e1&amp;pd_rd_w=NXUJ7&amp;pd_rd_wg=vN2ur&amp;pf_rd_p=feb2b32b-0085-4665-973c-36b431684408&amp;pf_rd_r=A9FZ49NZ4QNBCAJ05ZX0&amp;qid=1678422099&amp;sbo=RZvfv%252F%252FHxDF%252BO5021pAnSA%253D%253D&amp;sprefix=bluto%252Caps%252C214&amp;sr=1-2-c84eb971-91f2-4a4d-acce-811265c24254&amp;tag=technologytoday-21&amp;th=1&_encoding=UTF8&tag=gameiplay07-21&linkCode=ur2&linkId=a32621a80813a5bea402238a0d5b9c81&camp=3638&creative=24630" alt="Logitech M221 Wireless Mouse, Silent Buttons">
+			<img src="imgs/61wwho3r-DL._SX679_.jpg" alt="Logitech M221 Wireless Mouse, Silent Buttons" width="350" height="350">
+			<p id="title">
+				Logitech M221 Wireless Mouse, Silent Buttons
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
+		<a href="https://www.amazon.in/Zebronics-Zeb-Jaguar-Light-Blue-Grey/dp/B098K1439N/ref=sr_1_4?keywords=bluetooth+mouse+for+laptop&amp;qid=1678422099&amp;sprefix=bluto%252Caps%252C214&amp;sr=8-4&_encoding=UTF8&tag=gameiplay07-21&linkCode=ur2&linkId=978eedf2e9efae301a5d08a65613c310&camp=3638&creative=24630" alt="ZEBRONICS Zeb-Jaguar Wireless Mouse">
+			<img src="imgs/51CmyB0iqsL._SX679_.jpg" alt="ZEBRONICS Zeb-Jaguar Wireless Mouse" width="350" height="350">
+			<p id="title">
+				ZEBRONICS Zeb-Jaguar Wireless Mouse
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
 		<a href="https://amzn.to/41Vi3LT" alt="boAt Wave Call Smart Watch, Smart Talk">
 			<img src="imgs/614AipEWSIL._SX679_.jpg" alt="boAt Wave Call Smart Watch, Smart Talk" width="350" height="350">
 			<p id="title">
