--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	
 	<p>
 		<a href="https://www.amazon.in/STRIFF-Adjustable-Patented-Ventilated-Compatible/dp/B07XCM6T4N/ref=sr_1_3?crid=D1VHOI3SAJJZ&amp;keywords=laptop%252Bstand&amp;qid=1678422899&amp;sprefix=laptop%252B%252Caps%252C364&amp;sr=8-3&amp;th=1&_encoding=UTF8&tag=gameiplay07-21&linkCode=ur2&linkId=1ef97b095dd9bb0f7432cae867fa733d&camp=3638&creative=24630" alt="STRIFF Adjustable Laptop Tabletop Stand Patented Riser Ventilated">
-			<img src="imgs/71Zf9uUp+GL._SX679_.jpg" alt="STRIFF Adjustable Laptop Tabletop Stand Patented Riser Ventilated" width="350" height="350">
+			<img src="imgs/71Zf9uUpGL._SX679_.jpg" alt="STRIFF Adjustable Laptop Tabletop Stand Patented Riser Ventilated" width="350" height="350">
 			<p id="title">
 				STRIFF Adjustable Laptop Tabletop Stand Patented Riser Ventilated
 			</p>
