--- a/index.html
+++ b/index.html
@@ -41,6 +41,18 @@
         <div class="flex-item">
 	
 	<p>
+		<a href="https://www.amazon.in/dp/B07X6MKT5N?ref_=cm_sw_r_apan_dp_NHYCGT1XQBR8YTB3D9S5&_encoding=UTF8&tag=gameiplay07-21&linkCode=ur2&linkId=6789d82ce05b43eac594265ecc740eef&camp=3638&creative=24630" alt="Biotique Bio Herbcolor Conditioning Hair Color, 50g + 110ml - Darkest Brown 3N">
+			<img src="imgs/61DwNdHQhyL._SX679_.jpg" alt="Biotique Bio Herbcolor Conditioning Hair Color, 50g + 110ml - Darkest Brown 3N" width="350" height="350">
+			<p id="title">
+				Biotique Bio Herbcolor Conditioning Hair Color, 50g + 110ml - Darkest Brown 3N
+			</p>
+			
+		</a>
+	</p>
+   
+</div><div class="flex-item">
+	
+	<p>
 		<a href="https://www.amazon.in/Vega-Cliff-Helmet-Smoke-Visor/dp/B07YZBJL3N/ref=sr_1_30?keywords=vega&amp;pf_rd_i=4772060031&amp;pf_rd_m=A1K21FY43GMZF8&amp;pf_rd_p=78779561-c5b4-4c6e-af94-b83ac0c50aaa&amp;pf_rd_r=6DQ4580HVE756WMGPPRP&amp;pf_rd_s=merchandised-search-19&amp;pf_rd_t=101&amp;qid=1678423126&amp;refinements=p_89%253AVega&amp;s=automotive&amp;sr=1-30&_encoding=UTF8&tag=gameiplay07-21&linkCode=ur2&linkId=57e96f5321fcedd4bfcc31e69c391cb8&camp=3638&creative=24630" alt="Vega Cliff Helmet Smoke Visor (Cliff, Cliff DX, Cliff Air)">
 			<img src="imgs/31ptOgIqFOL.jpg" alt="Vega Cliff Helmet Smoke Visor (Cliff, Cliff DX, Cliff Air)" width="350" height="350">
 			<p id="title">
